# uvd

./: Cargo.toml  README.md  create_uvd.py  generate_uvd.rs  uvd.uvd  uvd.yml
audit/: developer.json  developer.json.asc
locales/en-US/: messages.ftl
locales/fr-FR/: messages.ftl
man/: uvd.1
migrations/: 20260708074419_create_developers_and_reviewers.sql  20260708113411_teams.sql
src/: cli.rs  clone.rs  config.rs  db.rs  locales.rs  main.rs  manifest.rs  package.rs  submit.rs  teams.rs  utils.rs
src/cli/: images.rs
